--- a/travel.html
+++ b/travel.html
@@ -12,7 +12,7 @@
     <img src="images/yellowstone_sulphur_springs.JPG" width = "400" alt="A large spring with clouds of sulfur smoke rising from it">
     <p>If you can handle the odor, the Yellowstone Sulphur Springs is a great place to hike.</p>
     <br>
-    <img src="images/yellowstone_sunset.JPG" width = "400" alt="Sunset over mountains with some charred trees in the foreground">
+    <img src="images/yellowstone_sunset.jpg" width = "400" alt="Sunset over mountains with some charred trees in the foreground">
     <p>The drive to Lamar Valley requires some dangerous roads.  But the result is amazing sunset views.</p>
     <br>
     <h2>Niagara Falls</h2>
